--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/opt/conda/bin/python"
+    "python.pythonPath": "/Users/eeko/opt/anaconda3/envs/py3_knime/bin/python"
 }
