--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
+__pycache__/*
+.ipynb_checkpoints/*
+*.gzip
+*.zip
 *.raw
-*.featureXML
-*.mzML
-*.bmp
-*.csv
-*.whl
-*.mzTab
-*.ms
-/rawdata
-.devcontainer/*
-.vscode/*
-CHEMISTRY/*
-miscellaneous/*
-__pycache__
+*.DS_Store
+.vscode/
+data/*
+results/*
+resources/*
+!GNPSExport.ini
+!data/.gitkeep
+!resources/ThermoRawFileParser/README.md
+!resources/Sirius/README.md
+!results/CSI/interim/.gitkeep
+!results/SIRIUS/interim/.gitkeep
+!results/features/interim/.gitkeep
+!results/interim/.gitkeep
