readme and description improvements

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ resources/*
 *.xlsx
 !common.py
 QExactive/*
-6_DataAnalysis*.ipynb
+6_DataAnalysis_Åsmund.ipynb
+6_DataAnalysis_std.ipynb
+6_DataAnalysis_NBC00265.ipynb
