--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Visualise_2.ipynb
 data/raw/*.raw
 data/mzML/*.mzML
 pyOpenMS_data_analysis/*
+8_Data_cleanup(data_dependent).ipynb
+9_Data_exploration(data_dependent).ipynb
